2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-snap.c: fix compilation on IRIX (bug #304685).

2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-appearance.c
	* app/display/gimpdisplayshell.c: removed the 2px border and
	replaced it with a 1px spacing in the main vbox. Makes the screen
	edges active when working in fullscreen mode (bug #165774).

2005-05-18  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell.c: hack around with gtk+ widget
	styles to get rid of the menubar padding in fullscreen mode.

2005-05-18  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: implemented pasting.
	s/mime-type/target/g because that's what it is.

2005-05-18  Michael Natterer  <mitch@gimp.org>

	* tools/test-clipboard.c: cleanup.

2005-05-18  Michael Natterer  <mitch@gimp.org>

	* tools/Makefile.am
	* tools/test-clipboard.c: new file, a test hack for clipboard
	debugging.

2005-05-17  Helvetix Victorinox  <helvetix@gimp.org>

	* app/composite/gimp-composite-sse2.c:
	Trying to be more flexible in register use so the compiler can do
	reloads without running out of registers when using optimisation
	modes other than 2.

	Avoid the message "error: can't find a register in class
	`GENERAL_REGS' while reloading `asm'"

	* app/composite/gimp-composite-x86.h
	Use more newlines in asm() macros to ensure that gcc gets the
	instruction count correct.  This is partially complete as of this
	commit.

	
2005-05-17  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version number to 2.3.1.

2005-05-17  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/vectors.pdb: Make gimp_vectors_get_strokes()
	work, add gimp_vectors_stroke_translate()  (I am not sure if this
	stays in the API, I am currently testing undo and freeze/thaw
	issues...)

	* app/pdb/internal_procs.c
	* app/pdb/vectors_cmds.c
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

2005-05-17  Simon Budig  <simon@gimp.org>
